--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
