--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.btn {
+    @apply px-4 py-2 bg-blue-500 text-white rounded-md font-bold cursor-pointer;
+}
